<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN ACTIVITY -->
    <string name="app_name">Vocards</string>
    <string name="main_practise">Practise</string>
    <string name="main_learn">Learn</string>
    <string name="main_set_dict">Set Dictionary</string>
    <string name="main_wordList">Word List</string>
    <string name="main_settings">Settings</string>
    <string name="main_active_dict_label">Active Dictionary</string>
    <string name="main_active_dict_word_count_label">Word Count</string>
    <string name="main_factor_label">Learn Factor</string>
    <string name="main_no_active_dict">No active dictionary</string>
    <string name="main_unknown_value">Unknown</string>
    <string name="main_options_settings">Settings</string>
    
    <!-- COMMON -->
    <string name="done_button">Done</string>
    <string name="add_button">Add</string>
    <string name="lang_none">None</string>
    <string name="lang_cz">CZ</string>
    <string name="lang_en">EN</string>
    <string name="lang_fr">FR</string>
    <string name="lang_sk">SK</string>
    <string name="lang_de">DE</string>
    <string name="lang_flag_description">Language flag</string>
    <string name="icon_descr">icon</string>
    
    <!-- Practise -->
    <string name="practise">Practise</string>
    <string name="practose_factor">Dictionary Factor:</string>
    <string name="practise_show">Show Other Side</string>
    <string name="practise_know">Know</string>
    <string name="practise_dont_know">Don\'t Know</string>
    
    <!-- Learn -->
    <string name="learn">Learn</string>
    <string name="learn_factor">Factor:</string>
    <string name="learn_position_click_label">Click To Set</string>
    <string name="learn_ordering_label">Word ordering is the same as in Word List.</string>
    <string name="learn_position">Position:</string>
    <string name="learn_prev_btn">Previous</string>
    <string name="learn_next_btn">Next</string>
    <string name="learn_chpos_title">Change Position To</string>
    <string name="learn_chpos_notint">Position has to be an integer.</string>
    <string name="learn_chpos_toomuch">Position is greater than the number of cards.</string>
    <string name="learn_chpos_underOne">Position can be at least 1.</string>
    <string name="learn_chpos_ok">Go</string>
    <string name="learn_chpos_cancel">Cancel</string>
    
    <!-- Word List -->
    <string name="word_list">Word List</string>
    <string name="word_list_empty">There are no words, yet.\n\nPress menu to add them.</string>
    <string name="word_list_new_word_hint">Word in Native Language</string>
    <string name="word_list_menu_show_filter">Show Filter</string>
    <string name="word_list_menu_hide_filter">Hide Filter</string>
    <string name="word_list_menu_new_word">Create Word</string>
    <string name="word_list_menu_order">Sorting</string>
    <string name="word_list_menu_selection_change">Change Selection</string>
    <string name="word_list_menu_move_selected">Move Selected</string>
    <string name="word_list_filter_hint">Filter Words</string>
    <string name="word_list_new_word">New Word</string>
    <string name="word_list_ctx_delete">Delete</string>
    <string name="word_list_ctx_edit">Edit</string>
    <string name="word_list_ctx_move">Move</string>
    <string name="word_list_deleted_toast">Word was successfully deleted.</string>
    <string name="word_list_empty_word_toast">Please, enter a native word text.</string>
    <string name="word_list_select_order_dialog_title">Please, select the desired word ordering.</string>
    <string name="word_list_select_parent_title">Select parent dictionary.</string>
    <string name="word_list_word_moved_toast">Words were successfully moved.</string>
    
    <!-- Add Word -->
    <string name="add_word">New Word</string>
    <string name="add_word_add_image_description">Add</string>
    <string name="add_word_edit_title">Edit Word</string>
    <string name="add_word_native">Native</string>
    <string name="add_word_foreign">Foreign</string>
    <string name="add_word_create">Create Word</string>
    <string name="add_word_edit">Edit Word</string>
    <string name="add_word_translation_pick_title">Select a translation:</string>
    <string name="add_word_empty_word_toast">Please, fill the native and foreign word.</string>
    <string name="add_word_translate_error_toast">Unable to connect to the translation server. Is your internet connection OK?</string>
    
    <!-- Dict List -->
    <string name="dict_list">Dict List</string>
    <string name="dict_list_empty">There are no dictionaries, yet.\n\nPress menu to add them.</string>
    <string name="dict_list_children_title">Subdictionaries of %1$s</string>
    <string name="dict_list_new_dict_hint">New Dictionary Name</string>
    <string name="dict_list_menu_show_filter">Show Filter</string>
    <string name="dict_list_menu_hide_filter">Hide Filter</string>
    <string name="dict_list_menu_new_dict">Create Dictionary</string>
    <string name="dict_list_ctx_delete_dict">Delete</string>
    <string name="dict_list_ctx_edit_dict">Edit</string>
    <string name="dict_list_ctx_show_descendant_dicts">Show Subdictionaries</string>
    <string name="dict_list_ctx_move_dict_under">Set parent</string>
    <string name="dict_list_ctx_move_root">Set as root</string>
    <string name="dict_list_dialog_delete_title">Selected dictionary contains %1$s cards. Do you really want to delete it?</string>
    <string name="dict_list_dialog_delete_yes">Yes</string>
    <string name="dict_list_dialog_delete_no">No</string>
    <string name="dict_list_dialog_delete_del_descendants_check">Delete all descendants</string>
    <string name="dict_list_filter_hint">Filter Dictionaries</string>
    <string name="dict_list_dict_deleted_toast">Dictionary was successfully deleted.</string>
    <string name="dict_list_dict_moved_root_toast">Dictionary was successfully set as root dictionary.</string>
    <string name="dict_list_dict_moved_toast">Dictionary was successfully moved.</string>
    <string name="dict_list_select_parent_title">Select parent dictionary.</string>
    <string name="dict_list_err_parent_is_same">Parent and moved dictionary are the same.</string>
    <string name="dict_list_err_parent_is_descendant">Parent is descendant of the moved dictionary.</string>    
    
    <!-- Dict Multi List -->
    <string name="dict_multilist">Dict Multi List</string>
    <string name="dict_multilist_ok">OK</string>
    <string name="dict_multilist_cancel">Cancel</string>
    
    <!-- Add Dict Form -->
    <string name="add_dict">New Dictionary</string>
    <string name="add_dict_name">Name</string>
    <string name="add_dict_native">Native Language</string>
    <string name="add_dict_foreign">Foreign Language</string>
    <string name="add_dict_create">Create Dictionary</string>
    <string name="add_dict_edit">Create Dictionary</string>
    <string name="add_dict_created_toast">Dictionary created.</string>
    <string name="add_dict_edited_toast">Dictionary edited.</string>
    <string name="add_dict_empty_name_toast">Please, fill the dictionary name.</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_card_font_size_title">Card font size</string>
    <string name="settings_practice_direction_title">Practise Direction</string>
    <string name="settings_translation_title">Enable Translation</string>
    <string name="settings_info">Info</string>
    <string name="settings_info_lastbackup_title">Last Backup</string>
    <string name="settings_info_lastbackup_default">Never</string>
    
    <!-- Export -->
    <string name="export_sdcard_not_mounted">Can\'t export your dictionaries because SD Card is not mounted.</string>
    <string name="export_send_subject">Vocards dictionary file</string>
    <string name="export_send_text">Hello, I\'m sending you my exported Vocards cards. Open it in your device to import them.</string>
    <string name="export_menu_export">Export Dictionaries</string>
    <string name="export_select_app_title">Please, select an application to send dictionaries.</string>
    <string name="export_file_write_error">There was an error during the file writing operation.</string>
    <string name="export_progress_title">Export</string>
    <string name="export_progress_msg">Dictionaries are being exported&#8230;</string>
    
    <!-- Import -->
    <string name="import_activity">Vocards Dictionary Import</string>
    <string name="import_activity_done">Import done.</string>
    <string name="import_progress_title">Import</string>
    <string name="import_progress_msg">Dictionaries are being imported&#8230;</string>

</resources>
