<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/mainIconFirstLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal" >

        <LinearLayout
            style="@style/main_icon_container"
            android:orientation="vertical">

            <View
                android:id="@+id/train"
                style="@style/icon_main"
                android:background="@drawable/main_practise" />

            <TextView
                style="@style/icon_main_text"
                android:text="@string/main_practise" />
        </LinearLayout>

        <LinearLayout
            style="@style/main_icon_container"
            android:orientation="vertical">

            <View
                android:id="@+id/learn"
                style="@style/icon_main"
                android:background="@drawable/main_learn" />

            <TextView
                style="@style/icon_main_text"
                android:text="@string/main_learn" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainIconSecondLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainIconFirstLine"
        android:gravity="center_horizontal" >

        <LinearLayout
            style="@style/main_icon_container"
            android:orientation="vertical">

            <View
                android:id="@+id/wordList"
                style="@style/icon_main"
                android:background="@drawable/main_word_list" />

            <TextView
                style="@style/icon_main_text"
                android:text="@string/main_wordList" />
        </LinearLayout>

        <LinearLayout
            style="@style/main_icon_container"
            android:orientation="vertical" >

            <View
                android:id="@+id/setDict"
                style="@style/icon_main"
                android:background="@drawable/main_set_dict" />

            <TextView
                style="@style/icon_main_text"
                android:text="@string/main_set_dict" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainIconSecondLine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_gray_background"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                style="@style/main_table_label"
                android:text="@string/main_active_dict_label" />

            <TextView
                style="@style/main_table_value"
                android:text="@string/main_no_active_dict" />
        </TableRow>
        
        <TableRow>
            <TextView
                style="@style/main_table_label"
                android:text="@string/main_active_dict_word_count_label" />

            <TextView
                style="@style/main_table_value"
                android:text="@string/main_unknown_value" />
        </TableRow>
        
        <TableRow>
            <TextView
                style="@style/main_table_label"
                android:text="@string/main_factor_label" />

            <TextView
                style="@style/main_table_value"
                android:text="@string/main_unknown_value" />
        </TableRow>
    </TableLayout>

</RelativeLayout>