<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
        style="@style/form_label"
        android:id="@+id/nativeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/add_word_native"/>
    
    <EditText
        android:id="@+id/nativeEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nativeLabel"
        android:inputType="text" />
    
    <TextView
        style="@style/form_label"
        android:id="@+id/foreignLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/nativeEdit"
        android:text="@string/add_word_foreign"/>
    
    <EditText
        android:id="@+id/foreignEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/foreignLabel"
        android:inputType="text" />
    
    <Button 
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_word_create" />
    

</RelativeLayout>